Introduce ProductService, add product data for ships and buildings

--- a/src/styles/product-icon.scss
+++ b/src/styles/product-icon.scss
@@ -34,5 +34,13 @@
     &.-p96 { background-image: url('../assets/products/thumb/yellowcake.png'); }
     &.-p114 { background-image: url('../assets/products/thumb/leached-coffinite.png'); }
     &.-p168 { background-image: url('../assets/products/thumb/heavy-transport-hull.png'); }
+    &.-p148 { background-image: url('../assets/products/thumb/cargo-module.png'); }
+    &.-p240 { background-image: url('../assets/products/thumb/avionics-module.png'); }
+    &.-p241 { background-image: url('../assets/products/thumb/escape-module.png'); }
+    &.-p242 { background-image: url('../assets/products/thumb/attitude-control-module.png'); }
+    &.-p243 { background-image: url('../assets/products/thumb/power-module.png'); }
+    &.-p244 { background-image: url('../assets/products/thumb/thermal-module.png'); }
+    &.-p245 { background-image: url('../assets/products/thumb/propulsion-module.png'); }
+    &.-pS2 { background-image: url('../assets/products/thumb/heavy-transport.png'); }
     &.-pB1 { background-image: url('../assets/products/thumb/warehouse.png'); }
 }
